# parseh

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: build.yml  lint.yml  release-windows.yml  release.yml  scorecard.yml  security.yml
chain/: Makefile  README.md  go.mod
chain/cmd/parsehd/: main.go
chain/x/inference/: module.go
chain/x/inference/keeper/: errors.go  keeper.go
chain/x/inference/types/: types.go
client/: README.md
client/hiderun/: index.html  package.json  tsconfig.json  vite.config.ts
client/hiderun/src/: main.ts
client/hiderun/src-tauri/: Cargo.toml  tauri.conf.json
client/hiderun/src-tauri/src/: main.rs
scripts/: demo.sh
sdk/: Cargo.toml  README.md  deny.toml
sdk/core/: Cargo.toml  build.rs
sdk/core/src/: lib.rs  parseh.udl
sdk/merchant/: Cargo.toml
sdk/merchant/src/: lib.rs
server/: Cargo.toml  README.md  deny.toml
server/core/: Cargo.toml  README.md
server/core/src/: lib.rs  peer_registry.rs
server/inference/: Cargo.toml
server/inference/src/: candle_runtime.rs  lib.rs  main.rs
server/llm-detect/: Cargo.toml  README.md
server/llm-detect/src/: gguf.rs  gpu.rs  lib.rs  llama_cpp.rs  ollama.rs
server/llm-detect/tests/: integration.rs
server/llm-downloader/: Cargo.toml
server/llm-downloader/src/: consent.rs  lib.rs  models.rs
server/llm-downloader/tests/: integration.rs
server/miner/: Cargo.toml  README.md
server/miner/src/: config.rs  executor.rs  identity_store.rs  main.rs  orders.rs  proxy.rs  readiness.rs  readiness_state.rs  topics.rs  update_check.rs  verify_buffer.rs
server/miner/tests/: integration_v0_2.rs
server/parseh-agent-runtime/: Cargo.toml  README.md
server/parseh-agent-runtime/src/: backend.rs  executor.rs  knowledge.rs  lib.rs  render.rs  workflow.rs
server/parseh-agent-runtime/tests/: integration.rs
server/parseh-agent-spec/: Cargo.toml  README.md
server/parseh-agent-spec/src/: definition.rs  knowledge_ref.rs  lib.rs  lineage.rs  schema_validation.rs
server/parseh-agent-spec/tests/: integration.rs
server/parseh-chaos/: Cargo.toml  README.md
server/parseh-chaos/src/: corruption.rs  lib.rs  malicious_verifier.rs  partition.rs  scenario.rs  sybil.rs
server/parseh-chaos/tests/: integration.rs
server/parseh-cli/: Cargo.toml  README.md
server/parseh-cli/src/: cli.rs  commands.rs  env_info.rs  identity.rs  main.rs  paths.rs  runner.rs
server/parseh-cli/tests/: cli.rs
server/parseh-fuzz/: .gitignore  Cargo.toml  README.md  run-all.sh
server/parseh-fuzz/corpus/: .gitignore
server/parseh-fuzz/corpus/fuzz_capability_advertisement/: v1_legacy_shape  v2_inference_ready  v2_relay_bridge  v2_storage_degraded
server/parseh-fuzz/corpus/fuzz_job_outcome/: disputed_two_peers  indeterminate  valid_unanimous
server/parseh-fuzz/corpus/fuzz_job_result/: empty_payload  inference_short  large_payload
server/parseh-fuzz/corpus/fuzz_job_spec/: inference_long_prompt  inference_minimal  relay_sensitive  storage_with_refs
server/parseh-fuzz/corpus/fuzz_job_verification/: abstained_statistical  agreed  disagreed_with_evidence
server/parseh-fuzz/corpus/fuzz_signature_verify/: garbage_pubkey  mangled_sig_low  valid_pk_sig_msg  wrong_message
server/parseh-fuzz/corpus/fuzz_state_delta/: governance_rule  outcome  reputation
server/parseh-fuzz/fuzz_targets/: fuzz_capability_advertisement.rs  fuzz_job_outcome.rs  fuzz_job_result.rs  fuzz_job_spec.rs  fuzz_job_verification.rs  fuzz_signature_verify.rs  fuzz_state_delta.rs
server/parseh-integration-tests/: Cargo.toml
server/parseh-integration-tests/src/: lib.rs  mesh.rs
server/parseh-integration-tests/tests/: five_node_mesh.rs
server/parseh-llm-downloader/: README.md
server/parseh-shared-state/: Cargo.toml  README.md
server/parseh-shared-state/src/: cipher.rs  delta.rs  lib.rs  migrations.rs  schema.rs  store.rs
server/parseh-shared-state/tests/: integration.rs
server/parseh-task/: Cargo.toml  README.md
server/parseh-task/src/: hash.rs  lib.rs  outcome.rs  result.rs  sign.rs  spec.rs  state_sync.rs  verification.rs
server/parseh-task/tests/: integration.rs
server/parseh-testnet/: Cargo.toml
server/parseh-testnet/src/: lib.rs  node.rs  scenario.rs
server/parseh-testnet/tests/: three_node_flow.rs
server/parseh-tunnel/: Cargo.toml  README.md
server/parseh-tunnel/src/: lib.rs  main.rs  protocol.rs  readiness.rs  router.rs  socks5.rs  swarm.rs  tunnel.rs
server/parseh-tunnel/tests/: integration.rs
server/parseh-verify/: Cargo.toml  README.md
server/parseh-verify/src/: lib.rs  methods.rs  quorum.rs  rate_limit.rs  selection.rs  verifier.rs
server/parseh-verify/tests/: integration.rs
server/relay/: Cargo.toml
server/relay/examples/: reality_smoke.rs
server/relay/src/: identity_store.rs  lib.rs  main.rs
server/relay/src/reality/: config.rs  mod.rs  subprocess.rs  transport.rs
server/relay/tests/: reality.rs  reality_default_off.rs
server/wallet/: Cargo.toml  README.md
server/wallet/src/: lib.rs
tools/: sanitize-history.sh  sanitize-replacements.example.txt
tools/parseh-coord/: .gitignore  Cargo.toml  README.md  contribute-issues.toml
tools/parseh-coord/src/: codeberg.rs  connector.rs  discord.rs  github.rs  main.rs  nostr.rs  store.rs
tools/parseh-mcp/: README.md  package.json  tsconfig.json
tools/parseh-mcp/src/: parseh-cli.ts  server.ts  tools.ts
tools/parseh-mcp/test/: smoke.test.ts
tools/parseh-stt/: .gitignore  README.md  install-whisper.sh  listen.sh
tools/parseh-tts/: .gitignore  README.md  install-piper.sh  speak.sh
tools/release/windows/: README.txt  build.sh  install-as-startup.bat  miner.example.toml  uninstall.bat
