[package]
name        = "parseh-merchant"
description = "PARSEH merchant SDK — invoicing, QR + NFC payment primitives."
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
