[package]
name        = "parseh-cli"
version     = "0.1.0-dev"
edition     = "2021"
license     = "Apache-2.0"
description = "Cross-platform CLI for PARSEH developers — task submission, network status, acceptance tests, issue reporting."
authors     = ["PARSEH contributors"]
repository  = "https://github.com/hiderun-tui/parseh"

[[bin]]
name = "parseh"   # users type `parseh` in their terminal
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true, features = ["env"] }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
libp2p             = { workspace = true }
ed25519-dalek      = { workspace = true }
dirs               = { workspace = true }
hex                = { workspace = true }
ciborium           = "0.2"
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
rand               = { workspace = true }
zeroize            = "1"
parseh-core         = { path = "../core" }
parseh-task         = { path = "../parseh-task" }
parseh-verify       = { path = "../parseh-verify" }
parseh-shared-state = { path = "../parseh-shared-state" }
parseh-llm-detect   = { path = "../llm-detect" }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
