[package]
name = "parseh-task"
version = "0.1.0-dev"
edition = "2021"
license = "Apache-2.0"
description = "Signed task abstraction (JobSpec / JobResult / JobVerification / JobOutcome) for the PARSEH V0.2 coordination layer."

[dependencies]
anyhow        = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_bytes   = "0.11"           # binary-friendly CBOR
ciborium      = "0.2"            # canonical CBOR crate
sha2          = { workspace = true }
hex           = { workspace = true }
libp2p        = { workspace = true }  # PeerId + Multiaddr (with serde feature)
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
parseh-core   = { path = "../core" }  # ServiceKind enum

[dev-dependencies]
serde_json = { workspace = true }     # human-readable test fixtures

[lib]
name = "parseh_task"
path = "src/lib.rs"
