[package]
name = "parseh-testnet"
version = "0.1.0-dev"
edition = "2021"
license = "Apache-2.0"
description = "V0.2 acceptance harness: 3-node in-process testnet."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ciborium = "0.2"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = "0.12"
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
parseh-core = { path = "../core" }
parseh-task = { path = "../parseh-task" }
parseh-verify = { path = "../parseh-verify" }
parseh-shared-state = { path = "../parseh-shared-state" }
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }

[lib]
name = "parseh_testnet"
path = "src/lib.rs"
